--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,1 +1,2 @@
 @import url('https://fonts.googleapis.com/css2?family=Bakbak+One&family=Encode+Sans+Semi+Condensed:wght@100&family=Roboto:wght@300&display=swap'); 
+@import url('https://fonts.googleapis.com/css2?family=Arapey:ital@0;1&family=Bakbak+One&family=Encode+Sans+Semi+Condensed:wght@100&family=Roboto:wght@300&display=swap');
